# microservices-demo

./: .aiexclude  .ct.yaml  .dockerignore  .drone.yaml  .editorconfig  .env  .env.example  .env.public.example  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AI_QUANBUY_README.md  BTQ-CI.groovy  BTQ-build.groovy  CI_CD_SETUP.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Demo.md  Deployment.md  Deploymeny.md  Dockerfile  Errors.md  How-To-Run-Locally.md  INIT-build.groovy  JenkinsFile  Jenkinsfile  Jenkinsfile2  Kubernetes.md  Makefile  ODED-NADAV.md  POC-screenplay.md  README.md  SRE-Playbook.md  Tiltfile  WORKSHOP.md  a.c  api-documentation.md  (+61 more)
.ansible/: README.md  hosts  main.yaml
.circleci/: config.yml
.claude/: dev-kit.manifest  quality-gate.routes  quality-gate.routes.example  settings.json
.deploystack/: clean  deploystack.yaml  test  test.yaml
.dev/: flake.nix
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  auto-approve.yml  dependabot.yaml  dependabot.yml  header-checker-lint.yml  prisma-cloud-config.yml  pull_request_template.md  release-config.json  release-manifest.json  renovate.json5  snippet-bot.yml  trusted-contribution.yml
.github_old/: CONTRIBUTING.md
.prismaCloud/: config.yml
.specify/: extensions.yml  feature.json  init-options.json  integration.json
Nitin-terraform/: README.md  main.tf  outputs.tf  variables.tf
Terraform-infra/: main.tf  variables.tf
Traefik/: 1-ingressroutes.yaml
argocd/: application.yaml
backend/: Dockerfile  requirements.txt
big-project/: README  big.yaml  generator.py  generator_command.txt  requirements.txt
client/: rest.md
cloudformation/: Basics.yaml  Stack.cf.yaml
cloudrun-manifests/: README.md  account.tf  adservice.tf  backend.tf  cart-service.tf  checkout-service.tf  currency-service.tf  email-service.tf  frontend-service.tf  load-generator.tf  locals.tf  network.tf  payment-service.tf  productcatalog-service.tf  recommendation-service.tf  redis-service.tf  shipping-service.tf  variables.tf
dashboard/: Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.js
deploy/: complete-k8s.yaml
dev-kubernetes-manifests/: checkoutservice.yaml  emailservice.yaml  loadgenerator.yaml  paymentservice.yaml  productcatalogservice.yaml  recommendationservice.yaml
docker/: .dockerignore  README.md  adservice.Dockerfile  cartservice.Dockerfile  checkoutservice.Dockerfile  currencyservice.Dockerfile  docker-compose.yml  emailservice.Dockerfile  frontend.Dockerfile  loadgenerator.Dockerfile  paymentservice.Dockerfile  productcatalog.Dockerfile  recommendation.Dockerfile  shippingservice.Dockerfile  shoppingassistant.Dockerfile
docker-k8-task/: TODO.md
docs/: DEPLOYMENT.md  KIND_PROVING.md  Online-Boutique-DevOps-Project.docx  PRODUCTION_AUDIT.md  PUBLIC_HOSTING.md  README.md  TELEMETRY.md  adding-new-microservice.md  agent-architecture.md  aks-deployment-guide.md  authorization-policies.md  cloudshell-tutorial.md  commit-conventions.md  cymbal-shops.md  deploy-new-project.md  deploystack.md  development-guide.md  development-principles.md  gcp-instrumentation.md  gke-autopilot.md  kustomization.yaml  limitations.md  memorystore.md  network-policies.md  observability.md  product-requirements.md  purpose.md  run-locally.md  run-options.md  service-mesh.md  spanner.md  workload-identity.md
dynatrace/: install.sh  readme.md
evals/: TEAM-PROMPT-generate-prd-and-design-doc.md  high-risk-order-history-design-doc.md  high-risk-order-history-prd.md  medium-risk-category-filter-design-doc.md  medium-risk-category-filter-prd.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .vocab.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
hack/: README.md  build-push.sh  inject-yaml.sh  license_header.txt  make-docker-images-nopush.sh  make-docker-images.sh  make-helm-chart.sh  make-release-artifacts.sh  make-release.sh  restore-release-artifacts.sh  restore.sh
helm-chart/: Chart.yaml  README.md  onlineboutique-0.5.1.tgz  onlineboutique-0.5.2.tgz  (+3 more)
helm-chart-old/: Chart.yaml  values.yaml
src/currencyservice-cpp/: CMakeLists.txt  Dockerfile  server.cc
(+2529 files in other folders)
